# TSN_V2

./: .env.example  .env.rtlsdr.example  .gitignore  AnalysisPlan.md  BUG_FIXES_2026-02-10.md  DEPLOYMENT_NET_AUTODETECT.md  Dockerfile  Dockerfile.rtlsdr  IMPLEMENTATION_SUMMARY.md  MIGRATION_REQUIRED.md  NET_AUTODETECT_REBUILD_STATUS.md  NET_DETECTION_FIXES_DEPLOYMENT.md  NET_DETECTION_OVERHAUL.md  NEXT_STEPS.md  NODE_SELECTION_FOR_MANUAL_NETS.md  README.md  README_V2.md  REBUILD_NO_CACHE.sh  TSN ReWrite Notes  check_callsign_log.py  debug_kj70x.py  debug_pattern.py  diagnose_net_detection.py  diagnose_volumes.sh  docker-compose.yml  fix_warmup_candidates.py  fix_warmup_candidates_simple.py  investigate_issues.py  prometheus.yml  pyproject.toml  test_callsign_regex.py  test_fixed_extractor.py  test_pattern_issue.py  test_watcher_fix.py  tsn_all2.sql  tsn_orchestrator.py  verify_deployment.py  verify_net_detection.py
V1_Archive/: Transcript_Analyzer.py  ai_backend.py  ai_smoother.py  callsign_extractor.py  extended_profiles_loader.py  project_runner.py  system_status.py  temp_receiver.py  topic_extractor.py  transcribe_and_log.py  transcribe_watcher.py
deployment/: DEPLOYMENT.md  NODE_DEPLOYMENT.md  tsn-node.service  tsn-server.service
docs/: ARCHITECTURE.md  DB_MIGRATION_GUIDE.md  DESIGN_NOTES.md  MULTI_NODE_SETUP.md  PROJECT_STATUS.md  REFERENCE_ANALYSIS.md  VLLM_KEEP_HOT_DEPLOYMENT.md  VLLM_KEEP_HOT_SYSTEM.md  VLLM_SETUP.md  WEB_SETUP_GUIDE.md
scripts/: add_formal_structure_columns.sql  add_net_formal_structure.py  cleanup_missing_audio.py  deploy_web.sh  fix_audio_node_ids.py  migrate_legacy_schema.py  migrate_net_structure.sh  reset_net_history.py  validate_keephot_config.py
tsn_cli/: __init__.py  cli.py
tsn_common/: __init__.py  config.py  db.py  db_init.py  logging.py  resource_lock.py  utils.py
tsn_common/migrations/: __init__.py  legacy_uuid_migrator.py  metrics_expansion.py
tsn_common/models/: __init__.py  audio.py  base.py  callsign.py  club.py  net.py  net_candidate.py  profile.py  support.py  transcription.py  trend.py
tsn_node/: __init__.py  archive_manager.py  transfer.py  watcher.py
tsn_rtlsdr/: README.md  __init__.py  main.py  recorder.py  uploader.py  web_panel.py
tsn_server/: __init__.py  analyzer.py  duplicate_detection.py  extractor.py  health.py  ingestion.py  qrz_client.py  storage_guard.py  stuck_file_recovery.py  system_load_monitor.py  transcriber.py
tsn_server/services/net_autodetect/: __init__.py  candidate_state.py  excerpt_selector.py  openai_verify.py  orchestrator.py  vllm_pass.py  window_builder.py
web/: README.md  __init__.py  config.py  dependencies.py  main.py
web/models/: __init__.py  user.py
web/routes/: __init__.py  api.py  auth.py  dashboard.py  profiles.py
web/services/: __init__.py  ai.py  dashboard.py  net_control.py  nets.py  profiles.py  user_dashboard.py  users.py  validation.py
web/static/css/: main.css
web/static/js/: main.js
web/templates/: base.html  callsign_profile.html  callsigns.html  club_detail.html  clubs.html  dashboard.html  health.html  login.html  ncs_profile.html  net_control.html  net_summary.html  nets.html  register.html  transcriptions.html  user_dashboard.html
