[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tsn-v2"
version = "2.0.0"
description = "The Spoken Network - Amateur Radio Intelligence System"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "TSN Team", email = "team@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Telecommunications Industry",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncmy>=0.2",
    "alembic>=1.13",
    
    # Async & HTTP
    "httpx>=0.26",
    "aiofiles>=23.2",
    
    # Web Framework
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "itsdangerous>=2.1",
    
    # Logging & Monitoring
    "structlog>=24.1",
    "prometheus-client>=0.19",
    
    # Audio Processing
    "faster-whisper>=0.10",
    "soundfile>=0.12",
    
    # AI/ML
    "openai>=1.10",
    "numpy>=1.26",
    
    # Node Side
    "watchfiles>=0.21",
    "paramiko>=3.4",
    
    # Utilities
    "python-dotenv>=1.0",
    "typer>=0.9",
    "rich>=13.7",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.7",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "hypothesis>=6.98",
    
    # Code Quality
    "black>=24.1",
    "ruff>=0.1",
    "mypy>=1.8",
    
    # Type Stubs
    "types-aiofiles",
    "types-paramiko",
]

gpu = [
    "torch>=2.1",
    "faster-whisper[cuda]>=0.10",
]

[project.scripts]
tsn = "tsn_cli.cli:main"
tsn-orchestrator = "tsn_orchestrator:main"
tsn-init-db = "tsn_common.db_init:main"

[tool.setuptools.packages.find]
include = ["tsn_*"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"tests/*" = ["B", "F841"]  # assert statements

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = [
    "faster_whisper.*",
    "paramiko.*",
    "soundfile.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=tsn_common",
    "--cov=tsn_node",
    "--cov=tsn_server",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gpu: marks tests requiring GPU",
]

[tool.coverage.run]
source = ["tsn_common", "tsn_node", "tsn_server"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
